--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,8 @@
         {% include newsletter.html %}
     </div>
     <div class="sidebar-section">
-        <h5><span>Your Ad Here</span></h5>
+        <h5><span>Klubový deň</span></h5>
         <img src="{{site.baseurl}}/assets/images/ad.png">
+        <p>Každý štvrtok od 17:00<p> 
     </div>
 </div>
