--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,6 +6,6 @@
     <div class="sidebar-section">
         <h5><span>Klubový deň</span></h5>
         <img src="{{site.baseurl}}/assets/images/ad.png">
-        <p>Každý štvrtok od 17:00</p> 
+        <p>Každý štvrtok od 17:00 na bouldrovke</p> 
     </div>
 </div>
