--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,13 @@
 <div class="sidebar sticky-top">        
-    <div class="sidebar-section">
+  <!--   <div class="sidebar-section">
         <h5><span>Newsletter</span></h5>
         {% include newsletter.html %}
-    </div>
+    </div>-->
     <div class="sidebar-section">
         <h5><span>Klubový deň</span></h5>
         <img src="{{site.baseurl}}/assets/images/ad.png">
         <p>Každý štvrtok od 17:00 na bouldrovke</p> 
     </div>
 </div>
+
+
