--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <div class="sidebar sticky-top">        
     <div class="sidebar-section">
         <h5><span>Klubový deň</span></h5>
-        <img src="{{site.baseurl}}/assets/images/ad.png">
         <p>Každý štvrtok od 17:00 na bouldrovke</p> 
+        <p>Bouldrovka Ondavská 21, Košice</p> 
     </div>
 </div>
 
